namespace player.animations.strings
{
    internal class PlayerAnimationStrings
    {
        internal static string isGrounded = "IsGrounded";
        internal static string isFalling = "IsFalling";
        internal static string xVelocity = "xVelocity";
        internal static string yVelocity = "yVelocity";
        internal static string isAttacking = "IsAttacking";
    }
}

